# resources

./: .gitignore  CMakeLists.txt  README.md  rpm.spec.in
instruments/ARCS/simulations/: powder
instruments/ARCS/simulations/Al/plate-rotated28deg-Ei80meV/: Makefile  beam  create-nxs  reduce2iqe  scatter  test-scatter
instruments/ARCS/simulations/Al/plate-rotated28deg-Ei80meV/sampleassembly/: Al-phonons  Al-phonons-40  Al-scatterer.xml  Al-scatterer.xml.nomultiphonon  README  sampleassembly.xml
instruments/ARCS/simulations/beam/: README
instruments/ARCS/simulations/beam/686.62meV-FC_700-0.5-ASTAnalyticSNSMod-McStasFermiChopper/: README  analytic_mod.odb  arcs_moderator2sample.pml  compare_m1_withmonitorthinkness_broadening.py  compare_m2_withmonitorthinkness_broadening.py  compute-fc-phase.py  compute-monitor-broadening.py  convolve.py  run
instruments/ARCS/simulations/beam/80meV-480/: arcs_moderator2sample.pml  log.run  run  run-m2s.sh
instruments/ARCS/simulations/beam/template/: clean  run
instruments/ARCS/simulations/powder/: Makefile
instruments/ARCS/simulations/resolution/powder/: ARCS.xml
instruments/ARCS/workflows/powder/: Makefile  scatter
instruments/CNCS/detsys/: cncs.xml.fornxs
instruments/CNCS/mcstas/: CNCS-2020.instr  CNCS_Dec_2016.instr  CNCS_Dec_2016_py.instr  CNCS_Sept2017.instr  guide11-focus.txt
instruments/CNCS/nxs/: cncs-raw-events-template.nxs.readme
instruments/HYSPEC/mcstas/: FermiChopper_mark.comp
instruments/HYSPEC/nxs/: hyspec-raw-events-template.nxs  hyspec-raw-events-template.nxs.readme
instruments/SEQUOIA/detsys/: README.md  mantid2mcvine.py  sequoia.xml.fornxs.v2
samples/Al/300K/plate_powderdiffr+phonon/: Al-phonons  Al-scatterer.xml  Al.laz
samples/Al/300K/plate_powderdiffr-only/: Al-scatterer.xml  Al.xyz  peaks.py
samples/Al/300K/plate_powderdiffr-only-use-peaks.py/: Al-scatterer.xml
samples/Si/100K/phonons/vasp-phonopy/: POSCAR  SPOSCAR  dos.h5
samples/V/: default
samples/V/300K/: V-primitive.xyz
samples/furnace/MICAS/: README.md
samples/furnace/MICAS/all-layers/: Nb-phonons  create_shape.py  heater1-scatterer.xml  sampleassembly.xml  shape.xml
samples/furnace/MICAS/all-layers/bccNb-RT-bvk-phonons-vnf/: dos-hist.h5
samples/furnace/MICAS/merged-inner-layers/: B1N1.xyz  Nb-phonons  Nb.xyz  README  can-scatterer.xml  dos-hist.h5  frame-left-scatterer.xml  heater-shield-scatterer.xml  holder-front-scatterer.xml  holder-scatterer.xml  sampleassembly.xml
samples/spinwave-demo/300K/plate/: X-scatterer.xml  X.xyz
